// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-skip-link component should pass down the theme and monochrome prop to the ic-link component 1`] = `
<ic-skip-link class="ic-theme-dark" monochrome="true" target="#page-content" theme="dark">
  <mock:shadow-root>
    <ic-link class="display-top ic-link ic-link-monochrome ic-theme-dark show-background" exportparts="link">
      <mock:shadow-root>
        <a class="link" href="#page-content" part="link" tabindex="0">
          <slot></slot>
        </a>
      </mock:shadow-root>
      Skip to main content
    </ic-link>
  </mock:shadow-root>
</ic-skip-link>
`;

exports[`ic-skip-link component should render a skip link by default with the correct text 1`] = `
<ic-skip-link target="#page-content">
  <mock:shadow-root>
    <ic-link class="display-top ic-link show-background" exportparts="link">
      <mock:shadow-root>
        <a class="link" href="#page-content" part="link" tabindex="0">
          <slot></slot>
        </a>
      </mock:shadow-root>
      Skip to main content
    </ic-link>
  </mock:shadow-root>
</ic-skip-link>
`;

exports[`ic-skip-link component should render a skip link with a custom label 1`] = `
<ic-skip-link label="Custom skip label" target="#page-content">
  <mock:shadow-root>
    <ic-link class="display-top ic-link show-background" exportparts="link">
      <mock:shadow-root>
        <a class="link" href="#page-content" part="link" tabindex="0">
          <slot></slot>
        </a>
      </mock:shadow-root>
      Custom skip label
    </ic-link>
  </mock:shadow-root>
</ic-skip-link>
`;

exports[`ic-skip-link component should render a skip link without a background when \`transparentBackground\` is true 1`] = `
<ic-skip-link target="#page-content" transparent-background="true">
  <mock:shadow-root>
    <ic-link class="display-top ic-link" exportparts="link">
      <mock:shadow-root>
        <a class="link" href="#page-content" part="link" tabindex="0">
          <slot></slot>
        </a>
      </mock:shadow-root>
      Skip to main content
    </ic-link>
  </mock:shadow-root>
</ic-skip-link>
`;

exports[`ic-skip-link component should render with the \`inline\` prop 1`] = `
<ic-skip-link inline="true" target="#page-content">
  <mock:shadow-root>
    <ic-link class="ic-link show-background" exportparts="link">
      <mock:shadow-root>
        <a class="link" href="#page-content" part="link" tabindex="0">
          <slot></slot>
        </a>
      </mock:shadow-root>
      Skip to main content
    </ic-link>
  </mock:shadow-root>
</ic-skip-link>
`;
